@@ -35,6 +35,8 @@ documents those changes that are of interest to users and admins.
     only by hacking the sbcast code).
  -- Add contribs/sjstat script (Perl tool to report job state information).
     Put into new RPM: sjstat.
+ -- Add sched/wiki2 (Moab) JOBMODIFY command support for VARIABLELIST option
+    to set supplemental environment variables for pending batch jobs.
 
 * Changes in SLURM 2.0.2
 ========================
